--- a/src/assets/styles/Card.css
+++ b/src/assets/styles/Card.css
@@ -11,6 +11,7 @@
 	min-width: 300px;
 	height: 355px;
 	margin-left: 60px;
+	margin-right: 10px;
 	padding: 0;
 }
 
@@ -24,7 +25,7 @@
 	margin-top: 80px;
 	max-width: 90%;
 	min-width: 85%;
-	height: 550px;
+	height: 650px;
 	margin-left: 60px;
 	background-color: white;
 }
@@ -34,8 +35,47 @@
 	background-color: white;
 }
 
+.content-name-detail {
+	text-align: left;
+	background-color: white;
+}
+
 .name {
 	padding-top: 1px;
 	color: black;
 }
 
+.name-detail {
+	padding-top: 1px;
+	color: black;
+}
+
+.title-detail {
+	margin-top: 15px;
+	text-align: center;
+}
+
+.img-content {
+	margin-top: 20px;
+	text-align: center;
+}
+
+.img-card-detail {
+	height: 350px;
+	width: 400px;
+}
+
+.back {
+	margin-top: 30px;
+}
+
+@media (max-width: 440px) {
+	.card {
+		margin-top: 20px;
+		max-width: 285px;
+		min-width: 280px;
+		height: 355px;
+		margin-left: 10px;
+		padding: 0;
+	}
+}
